// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsPage should match a snapshot when I have the full menu 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1.5rem;
 mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
          >
            <mock-styled.div
              classname=""
            >
              My Apps
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              New App
            </mock-styled.div>
          </mock-styled.div>
          <div
            class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
          >
            <mock-styled.span
              classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css.
  font-size: 5rem;
"
            >
              <svg />
            </mock-styled.span>
            <mock-styled.h2
              classname=""
            >
              Apps Documentation
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css."
            >
              This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
            </mock-styled.p>
            <mock-styled.button
              classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css."
            >
              View Docs
              <mock-styled.div />
            </mock-styled.button>
          </div>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.h1
            classname=""
          >
            My Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.h5>
                      MOCK_APP_NAME
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.h5>
                      MOCK_APP_NAME_ANOTHER
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="mock-css. mock-css."
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.25rem;
"
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div />
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 1.5rem;
 mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
        >
          <mock-styled.div
            classname=""
          >
            My Apps
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            New App
          </mock-styled.div>
        </mock-styled.div>
        <div
          class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Apps Documentation
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css."
          >
            View Docs
            <mock-styled.div />
          </mock-styled.button>
        </div>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.h1
          classname=""
        >
          My Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.h5>
                    MOCK_APP_NAME
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.h5>
                    MOCK_APP_NAME_ANOTHER
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="mock-css. mock-css."
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.25rem;
"
            >
              <svg />
            </mock-styled.span>
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when apps are loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Apps
          </mock-styled.h1>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Apps
        </mock-styled.h1>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when apps are present 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1.5rem;
 mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
          >
            <mock-styled.div
              classname=""
            >
              My Apps
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              New App
            </mock-styled.div>
          </mock-styled.div>
          <div
            class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
          >
            <mock-styled.span
              classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css.
  font-size: 5rem;
"
            >
              <svg />
            </mock-styled.span>
            <mock-styled.h2
              classname=""
            >
              Apps Documentation
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css."
            >
              This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
            </mock-styled.p>
            <mock-styled.button
              classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css."
            >
              View Docs
              <mock-styled.div />
            </mock-styled.button>
          </div>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.h1
            classname=""
          >
            My Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.h5>
                      MOCK_APP_NAME
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.h5>
                      MOCK_APP_NAME_ANOTHER
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="mock-css. mock-css."
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.25rem;
"
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div />
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 1.5rem;
 mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
        >
          <mock-styled.div
            classname=""
          >
            My Apps
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            New App
          </mock-styled.div>
        </mock-styled.div>
        <div
          class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Apps Documentation
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.5rem;
 mock-css."
          >
            View Docs
            <mock-styled.div />
          </mock-styled.button>
        </div>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.h1
          classname=""
        >
          My Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.h5>
                    MOCK_APP_NAME
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.h5>
                    MOCK_APP_NAME_ANOTHER
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="mock-css. mock-css."
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.25rem;
"
            >
              <svg />
            </mock-styled.span>
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when no apps are created 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.h1
            classname=""
          >
            My Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.h5>
                      MOCK_APP_NAME
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.span
                        classname=""
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </mock-styled.span>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.h5>
                      MOCK_APP_NAME_ANOTHER
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="mock-css. mock-css."
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.25rem;
"
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div />
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.h1
          classname=""
        >
          My Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.h5>
                    MOCK_APP_NAME
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
 mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.h5>
                    MOCK_APP_NAME_ANOTHER
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="mock-css. mock-css."
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.25rem;
"
            >
              <svg />
            </mock-styled.span>
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
